[project]
name = "fetch-uscki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.3",
    "typer>=0.15.4",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.0.20250515",
]
